# Nito-Wasm

./: .gitignore  0.bootstrap.js  Cargo.toml  LICENSE  README.md  bootstrap.js  index.html
src/: action.rs  cell.rs  config.rs  direction.rs  element.rs  lib.rs  simulation.rs
www/: index.html  index.js  package-lock.json  package.json
