
[package]
name = "Nito"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "nito"
path = "src/lib.rs"

[features]
default = ["console_error_panic_hook"]

[dependencies]
toml = "0.8.6"
cfg-if = "0.1.2"
wasm-bindgen = "0.2"
serde = { version = "1.0.190", features = ["derive"] }
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

# [profile.release]
# opt-level = 'z'
# lto = true


